--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Gordon <gordonyit25@gmail.com>",
   "description": "",
   "main": "/backend/index.js",
+  "type": "module",
   "scripts": {
     "dev": "SET NODE_ENV=development& nodemon --env-file=.env  ./backend/index.js",
     "prod": "SET NODE_ENV=production& node --env-file=.env  ./backend/index.js",
@@ -18,6 +19,7 @@
     "express": "^4.21.0",
     "express-generator": "^4.16.1",
     "jsonwebtoken": "^9.0.2",
+    "my-tms-app": "file:",
     "mysql2": "^3.11.3",
     "node": "^22.9.0"
   }
