--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,9 +11,14 @@
     "strict": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "baseUrl": ".",
+    "target": "es6",
+    "module": "esnext",
     "paths": {
-      "$lib/*": ["/src/lib/*"]
-    }
+      "$lib/*": ["src/lib/*"]
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   // except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
