--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "expres": "^0.0.5",
     "express": "^4.21.0",
     "express-generator": "^4.16.1",
     "jsonwebtoken": "^9.0.2",
     "my-tms-app": "file:",
     "mysql2": "^3.11.3",
-    "node": "^22.9.0"
+    "node": "^22.9.0",
+    "nodemailer": "^6.9.15"
   }
 }
